products: corrected invisible detail subtitle

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -326,6 +326,7 @@
 
 .detail-desc h3 {
 	line-height: 1.2em;
+	color: #fff;
 }
 .carousel {
 	margin-bottom: 0;
